# sort-dotgitfiles

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
requirements/: Makefile  dev.in  dev.txt  setup.txt
src/sort_dotgitfiles/: __init__.py  sort_gitattributes.py  sort_gitignore.py
src/sort_git_files/: _utils.py  sort_gitattributes.py  sort_gitignore.py
