[metadata]
name = sort-git-files
version = 0.0.0
description = `pre-commit` hooks for sorting `.gitattributes` and `.gitignore` files
author = Jamal Mustafa
author_email = jimustafa@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    sort-gitattributes = sort_git_files.sort_gitattributes:main
    sort-gitignore = sort_git_files.sort_gitignore:main

[options.packages.find]
where = src
